# sillywebsitething

./: data_fetch.py  japaneseshit.py  json_generator.py  main.py  pyproject.toml  requirements.txt
