[tool.poetry]
name = "younggrimsale"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
replit = "^3.2.4"
Django = "^4.1.2"
tweepy = "^4.11.0"
pygelbooru = "^0.5.0"
Werkzeug = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
